# findstream

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  mise.toml  package.json  pnpm-lock.yaml  tailwind.config.js  tombi.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: tailwind.css
src/: lang.rs  main.rs  middleware.rs  responses.rs  routes.rs  settings.rs  templates.rs
src/handlers/: api.rs  mod.rs
src/templates/: lang.rs  mod.rs
src/twitch/: deser.rs  mod.rs
templates/: api_info.html  base.html  credits.html  header.html  index.html  results.html  sample_request.json  sample_response.json
