[package]
name = "findstream"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["http2"] }
basic-toml = "0.1.10"
maud = { version = "0.27.0", features = ["axum"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["parsing"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-shutdown = "0.1.5"
tower = { version = "0.5.2", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6.8", features = [
    "compression-gzip",
    "decompression-gzip",
    "trace",
    "util"
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
unidirs = "0.1.2"
url = "2.5.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-sys = { version = "0.6.1", default-features = false }
tikv-jemallocator = { version = "0.6.1", features = [
    "background_threads",
    "override_allocator_on_supported_platforms"
] }
